y.output
Terminals unused in grammar

   DO
   BREAK
   CHAR
   DOUBLE
   SWITCH
   CASE
   DEFAULT
   CONTINUE


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_definition

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier ID LPAREN RPAREN compound_statement

    8 parameter_list: parameter_list COMMA type_specifier ID
    9               | parameter_list COMMA type_specifier
   10               | type_specifier ID
   11               | type_specifier

   12 compound_statement: LCURL statements RCURL
   13                   | LCURL RCURL

   14 var_declaration: type_specifier declaration_list SEMICOLON

   15 type_specifier: INT
   16               | FLOAT
   17               | VOID

   18 declaration_list: declaration_list COMMA ID
   19                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   20                 | ID
   21                 | ID LTHIRD CONST_INT RTHIRD

   22 statements: statement
   23           | statements statement

   24 statement: var_declaration
   25          | func_definition
   26          | expression_statement
   27          | compound_statement
   28          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   29          | IF LPAREN expression RPAREN statement
   30          | IF LPAREN expression RPAREN statement ELSE statement
   31          | WHILE LPAREN expression RPAREN statement
   32          | PRINTLN LPAREN ID RPAREN SEMICOLON
   33          | RETURN expression SEMICOLON

   34 expression_statement: SEMICOLON
   35                     | expression SEMICOLON

   36 variable: ID
   37         | ID LTHIRD expression RTHIRD

   38 expression: logic_expression
   39           | variable ASSIGNOP logic_expression

   40 logic_expression: rel_expression
   41                 | rel_expression LOGICOP rel_expression

   42 rel_expression: simple_expression
   43               | simple_expression RELOP simple_expression

   44 simple_expression: term
   45                  | simple_expression ADDOP term

   46 term: unary_expression
   47     | term MULOP unary_expression

   48 unary_expression: ADDOP unary_expression
   49                 | NOT unary_expression
   50                 | factor

   51 factor: variable
   52       | ID LPAREN argument_list RPAREN
   53       | LPAREN expression RPAREN
   54       | CONST_INT
   55       | CONST_FLOAT
   56       | variable INCOP
   57       | variable DECOP

   58 argument_list: arguments
   59              | /* empty */

   60 arguments: arguments COMMA logic_expression
   61          | logic_expression


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 29 30
ELSE (259) 30
FOR (260) 28
WHILE (261) 31
DO (262)
BREAK (263)
INT (264) 15
CHAR (265)
FLOAT (266) 16
DOUBLE (267)
VOID (268) 17
RETURN (269) 33
SWITCH (270)
CASE (271)
DEFAULT (272)
CONTINUE (273)
PRINTLN (274) 32
ADDOP (275) 45 48
MULOP (276) 47
INCOP (277) 56
DECOP (278) 57
RELOP (279) 43
ASSIGNOP (280) 39
LOGICOP (281) 41
NOT (282) 49
LPAREN (283) 6 7 28 29 30 31 32 52 53
RPAREN (284) 6 7 28 29 30 31 32 52 53
LCURL (285) 12 13
RCURL (286) 12 13
LTHIRD (287) 19 21 37
RTHIRD (288) 19 21 37
COMMA (289) 8 9 18 19 60
SEMICOLON (290) 14 32 33 34 35
CONST_INT (291) 19 21 54
CONST_FLOAT (292) 55
ID (293) 6 7 8 10 18 19 20 21 32 36 37 52
LOWER_THAN_ELSE (294)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
start (41)
    on left: 1, on right: 0
program (42)
    on left: 2 3, on right: 1 2
unit (43)
    on left: 4 5, on right: 2 3
func_definition (44)
    on left: 6 7, on right: 5 25
parameter_list (45)
    on left: 8 9 10 11, on right: 6 8 9
compound_statement (46)
    on left: 12 13, on right: 6 7 27
var_declaration (47)
    on left: 14, on right: 4 24
type_specifier (48)
    on left: 15 16 17, on right: 6 7 8 9 10 11 14
declaration_list (49)
    on left: 18 19 20 21, on right: 14 18 19
statements (50)
    on left: 22 23, on right: 12 23
statement (51)
    on left: 24 25 26 27 28 29 30 31 32 33, on right: 22 23 28 29 30
    31
expression_statement (52)
    on left: 34 35, on right: 26 28
variable (53)
    on left: 36 37, on right: 39 51 56 57
expression (54)
    on left: 38 39, on right: 28 29 30 31 33 35 37 53
logic_expression (55)
    on left: 40 41, on right: 38 39 60 61
rel_expression (56)
    on left: 42 43, on right: 40 41
simple_expression (57)
    on left: 44 45, on right: 42 43 45
term (58)
    on left: 46 47, on right: 44 45 47
unary_expression (59)
    on left: 48 49 50, on right: 46 47 48 49
factor (60)
    on left: 51 52 53 54 55 56 57, on right: 50
argument_list (61)
    on left: 58 59, on right: 52
arguments (62)
    on left: 60 61, on right: 58 60


State 0

    0 $accept: . start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    start            go to state 4
    program          go to state 5
    unit             go to state 6
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


State 1

   15 type_specifier: INT .

    $default  reduce using rule 15 (type_specifier)


State 2

   16 type_specifier: FLOAT .

    $default  reduce using rule 16 (type_specifier)


State 3

   17 type_specifier: VOID .

    $default  reduce using rule 17 (type_specifier)


State 4

    0 $accept: start . $end

    $end  shift, and go to state 10


State 5

    1 start: program .
    2 program: program . unit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (start)

    unit             go to state 11
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


State 6

    3 program: unit .

    $default  reduce using rule 3 (program)


State 7

    5 unit: func_definition .

    $default  reduce using rule 5 (unit)


State 8

    4 unit: var_declaration .

    $default  reduce using rule 4 (unit)


State 9

    6 func_definition: type_specifier . ID LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier . ID LPAREN RPAREN compound_statement
   14 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 12

    declaration_list  go to state 13


State 10

    0 $accept: start $end .

    $default  accept


State 11

    2 program: program unit .

    $default  reduce using rule 2 (program)


State 12

    6 func_definition: type_specifier ID . LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier ID . LPAREN RPAREN compound_statement
   20 declaration_list: ID .
   21                 | ID . LTHIRD CONST_INT RTHIRD

    LPAREN  shift, and go to state 14
    LTHIRD  shift, and go to state 15

    $default  reduce using rule 20 (declaration_list)


State 13

   14 var_declaration: type_specifier declaration_list . SEMICOLON
   18 declaration_list: declaration_list . COMMA ID
   19                 | declaration_list . COMMA ID LTHIRD CONST_INT RTHIRD

    COMMA      shift, and go to state 16
    SEMICOLON  shift, and go to state 17


State 14

    6 func_definition: type_specifier ID LPAREN . parameter_list RPAREN compound_statement
    7                | type_specifier ID LPAREN . RPAREN compound_statement

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    VOID    shift, and go to state 3
    RPAREN  shift, and go to state 18

    parameter_list  go to state 19
    type_specifier  go to state 20


State 15

   21 declaration_list: ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 21


State 16

   18 declaration_list: declaration_list COMMA . ID
   19                 | declaration_list COMMA . ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 22


State 17

   14 var_declaration: type_specifier declaration_list SEMICOLON .

    $default  reduce using rule 14 (var_declaration)


State 18

    7 func_definition: type_specifier ID LPAREN RPAREN . compound_statement

    LCURL  shift, and go to state 23

    compound_statement  go to state 24


State 19

    6 func_definition: type_specifier ID LPAREN parameter_list . RPAREN compound_statement
    8 parameter_list: parameter_list . COMMA type_specifier ID
    9               | parameter_list . COMMA type_specifier

    RPAREN  shift, and go to state 25
    COMMA   shift, and go to state 26


State 20

   10 parameter_list: type_specifier . ID
   11               | type_specifier .

    ID  shift, and go to state 27

    $default  reduce using rule 11 (parameter_list)


State 21

   21 declaration_list: ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 28


State 22

   18 declaration_list: declaration_list COMMA ID .
   19                 | declaration_list COMMA ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 29

    $default  reduce using rule 18 (declaration_list)


State 23

   12 compound_statement: LCURL . statements RCURL
   13                   | LCURL . RCURL

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    WHILE        shift, and go to state 32
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 33
    PRINTLN      shift, and go to state 34
    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    LCURL        shift, and go to state 23
    RCURL        shift, and go to state 38
    SEMICOLON    shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ID           shift, and go to state 42

    func_definition       go to state 43
    compound_statement    go to state 44
    var_declaration       go to state 45
    type_specifier        go to state 9
    statements            go to state 46
    statement             go to state 47
    expression_statement  go to state 48
    variable              go to state 49
    expression            go to state 50
    logic_expression      go to state 51
    rel_expression        go to state 52
    simple_expression     go to state 53
    term                  go to state 54
    unary_expression      go to state 55
    factor                go to state 56


State 24

    7 func_definition: type_specifier ID LPAREN RPAREN compound_statement .

    $default  reduce using rule 7 (func_definition)


State 25

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN . compound_statement

    LCURL  shift, and go to state 23

    compound_statement  go to state 57


State 26

    8 parameter_list: parameter_list COMMA . type_specifier ID
    9               | parameter_list COMMA . type_specifier

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    type_specifier  go to state 58


State 27

   10 parameter_list: type_specifier ID .

    $default  reduce using rule 10 (parameter_list)


State 28

   21 declaration_list: ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 21 (declaration_list)


State 29

   19 declaration_list: declaration_list COMMA ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 59


State 30

   29 statement: IF . LPAREN expression RPAREN statement
   30          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 60


State 31

   28 statement: FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 61


State 32

   31 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 62


State 33

   33 statement: RETURN . expression SEMICOLON

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ID           shift, and go to state 42

    variable           go to state 49
    expression         go to state 63
    logic_expression   go to state 51
    rel_expression     go to state 52
    simple_expression  go to state 53
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56


State 34

   32 statement: PRINTLN . LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 64


State 35

   48 unary_expression: ADDOP . unary_expression

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ID           shift, and go to state 42

    variable          go to state 65
    unary_expression  go to state 66
    factor            go to state 56


State 36

   49 unary_expression: NOT . unary_expression

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ID           shift, and go to state 42

    variable          go to state 65
    unary_expression  go to state 67
    factor            go to state 56


State 37

   53 factor: LPAREN . expression RPAREN

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ID           shift, and go to state 42

    variable           go to state 49
    expression         go to state 68
    logic_expression   go to state 51
    rel_expression     go to state 52
    simple_expression  go to state 53
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56


State 38

   13 compound_statement: LCURL RCURL .

    $default  reduce using rule 13 (compound_statement)


State 39

   34 expression_statement: SEMICOLON .

    $default  reduce using rule 34 (expression_statement)


State 40

   54 factor: CONST_INT .

    $default  reduce using rule 54 (factor)


State 41

   55 factor: CONST_FLOAT .

    $default  reduce using rule 55 (factor)


State 42

   36 variable: ID .
   37         | ID . LTHIRD expression RTHIRD
   52 factor: ID . LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 69
    LTHIRD  shift, and go to state 70

    $default  reduce using rule 36 (variable)


State 43

   25 statement: func_definition .

    $default  reduce using rule 25 (statement)


State 44

   27 statement: compound_statement .

    $default  reduce using rule 27 (statement)


State 45

   24 statement: var_declaration .

    $default  reduce using rule 24 (statement)


State 46

   12 compound_statement: LCURL statements . RCURL
   23 statements: statements . statement

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    WHILE        shift, and go to state 32
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 33
    PRINTLN      shift, and go to state 34
    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    LCURL        shift, and go to state 23
    RCURL        shift, and go to state 71
    SEMICOLON    shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ID           shift, and go to state 42

    func_definition       go to state 43
    compound_statement    go to state 44
    var_declaration       go to state 45
    type_specifier        go to state 9
    statement             go to state 72
    expression_statement  go to state 48
    variable              go to state 49
    expression            go to state 50
    logic_expression      go to state 51
    rel_expression        go to state 52
    simple_expression     go to state 53
    term                  go to state 54
    unary_expression      go to state 55
    factor                go to state 56


State 47

   22 statements: statement .

    $default  reduce using rule 22 (statements)


State 48

   26 statement: expression_statement .

    $default  reduce using rule 26 (statement)


State 49

   39 expression: variable . ASSIGNOP logic_expression
   51 factor: variable .
   56       | variable . INCOP
   57       | variable . DECOP

    INCOP     shift, and go to state 73
    DECOP     shift, and go to state 74
    ASSIGNOP  shift, and go to state 75

    $default  reduce using rule 51 (factor)


State 50

   35 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 76


State 51

   38 expression: logic_expression .

    $default  reduce using rule 38 (expression)


State 52

   40 logic_expression: rel_expression .
   41                 | rel_expression . LOGICOP rel_expression

    LOGICOP  shift, and go to state 77

    $default  reduce using rule 40 (logic_expression)


State 53

   42 rel_expression: simple_expression .
   43               | simple_expression . RELOP simple_expression
   45 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 78
    RELOP  shift, and go to state 79

    $default  reduce using rule 42 (rel_expression)


State 54

   44 simple_expression: term .
   47 term: term . MULOP unary_expression

    MULOP  shift, and go to state 80

    $default  reduce using rule 44 (simple_expression)


State 55

   46 term: unary_expression .

    $default  reduce using rule 46 (term)


State 56

   50 unary_expression: factor .

    $default  reduce using rule 50 (unary_expression)


State 57

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN compound_statement .

    $default  reduce using rule 6 (func_definition)


State 58

    8 parameter_list: parameter_list COMMA type_specifier . ID
    9               | parameter_list COMMA type_specifier .

    ID  shift, and go to state 81

    $default  reduce using rule 9 (parameter_list)


State 59

   19 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 82


State 60

   29 statement: IF LPAREN . expression RPAREN statement
   30          | IF LPAREN . expression RPAREN statement ELSE statement

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ID           shift, and go to state 42

    variable           go to state 49
    expression         go to state 83
    logic_expression   go to state 51
    rel_expression     go to state 52
    simple_expression  go to state 53
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56


State 61

   28 statement: FOR LPAREN . expression_statement expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    SEMICOLON    shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ID           shift, and go to state 42

    expression_statement  go to state 84
    variable              go to state 49
    expression            go to state 50
    logic_expression      go to state 51
    rel_expression        go to state 52
    simple_expression     go to state 53
    term                  go to state 54
    unary_expression      go to state 55
    factor                go to state 56


State 62

   31 statement: WHILE LPAREN . expression RPAREN statement

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ID           shift, and go to state 42

    variable           go to state 49
    expression         go to state 85
    logic_expression   go to state 51
    rel_expression     go to state 52
    simple_expression  go to state 53
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56


State 63

   33 statement: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 86


State 64

   32 statement: PRINTLN LPAREN . ID RPAREN SEMICOLON

    ID  shift, and go to state 87


State 65

   51 factor: variable .
   56       | variable . INCOP
   57       | variable . DECOP

    INCOP  shift, and go to state 73
    DECOP  shift, and go to state 74

    $default  reduce using rule 51 (factor)


State 66

   48 unary_expression: ADDOP unary_expression .

    $default  reduce using rule 48 (unary_expression)


State 67

   49 unary_expression: NOT unary_expression .

    $default  reduce using rule 49 (unary_expression)


State 68

   53 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 88


State 69

   52 factor: ID LPAREN . argument_list RPAREN

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ID           shift, and go to state 42

    $default  reduce using rule 59 (argument_list)

    variable           go to state 65
    logic_expression   go to state 89
    rel_expression     go to state 52
    simple_expression  go to state 53
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56
    argument_list      go to state 90
    arguments          go to state 91


State 70

   37 variable: ID LTHIRD . expression RTHIRD

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ID           shift, and go to state 42

    variable           go to state 49
    expression         go to state 92
    logic_expression   go to state 51
    rel_expression     go to state 52
    simple_expression  go to state 53
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56


State 71

   12 compound_statement: LCURL statements RCURL .

    $default  reduce using rule 12 (compound_statement)


State 72

   23 statements: statements statement .

    $default  reduce using rule 23 (statements)


State 73

   56 factor: variable INCOP .

    $default  reduce using rule 56 (factor)


State 74

   57 factor: variable DECOP .

    $default  reduce using rule 57 (factor)


State 75

   39 expression: variable ASSIGNOP . logic_expression

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ID           shift, and go to state 42

    variable           go to state 65
    logic_expression   go to state 93
    rel_expression     go to state 52
    simple_expression  go to state 53
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56


State 76

   35 expression_statement: expression SEMICOLON .

    $default  reduce using rule 35 (expression_statement)


State 77

   41 logic_expression: rel_expression LOGICOP . rel_expression

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ID           shift, and go to state 42

    variable           go to state 65
    rel_expression     go to state 94
    simple_expression  go to state 53
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56


State 78

   45 simple_expression: simple_expression ADDOP . term

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ID           shift, and go to state 42

    variable          go to state 65
    term              go to state 95
    unary_expression  go to state 55
    factor            go to state 56


State 79

   43 rel_expression: simple_expression RELOP . simple_expression

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ID           shift, and go to state 42

    variable           go to state 65
    simple_expression  go to state 96
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56


State 80

   47 term: term MULOP . unary_expression

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ID           shift, and go to state 42

    variable          go to state 65
    unary_expression  go to state 97
    factor            go to state 56


State 81

    8 parameter_list: parameter_list COMMA type_specifier ID .

    $default  reduce using rule 8 (parameter_list)


State 82

   19 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 19 (declaration_list)


State 83

   29 statement: IF LPAREN expression . RPAREN statement
   30          | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 98


State 84

   28 statement: FOR LPAREN expression_statement . expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    SEMICOLON    shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ID           shift, and go to state 42

    expression_statement  go to state 99
    variable              go to state 49
    expression            go to state 50
    logic_expression      go to state 51
    rel_expression        go to state 52
    simple_expression     go to state 53
    term                  go to state 54
    unary_expression      go to state 55
    factor                go to state 56


State 85

   31 statement: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 100


State 86

   33 statement: RETURN expression SEMICOLON .

    $default  reduce using rule 33 (statement)


State 87

   32 statement: PRINTLN LPAREN ID . RPAREN SEMICOLON

    RPAREN  shift, and go to state 101


State 88

   53 factor: LPAREN expression RPAREN .

    $default  reduce using rule 53 (factor)


State 89

   61 arguments: logic_expression .

    $default  reduce using rule 61 (arguments)


State 90

   52 factor: ID LPAREN argument_list . RPAREN

    RPAREN  shift, and go to state 102


State 91

   58 argument_list: arguments .
   60 arguments: arguments . COMMA logic_expression

    COMMA  shift, and go to state 103

    $default  reduce using rule 58 (argument_list)


State 92

   37 variable: ID LTHIRD expression . RTHIRD

    RTHIRD  shift, and go to state 104


State 93

   39 expression: variable ASSIGNOP logic_expression .

    $default  reduce using rule 39 (expression)


State 94

   41 logic_expression: rel_expression LOGICOP rel_expression .

    $default  reduce using rule 41 (logic_expression)


State 95

   45 simple_expression: simple_expression ADDOP term .
   47 term: term . MULOP unary_expression

    MULOP  shift, and go to state 80

    $default  reduce using rule 45 (simple_expression)


State 96

   43 rel_expression: simple_expression RELOP simple_expression .
   45 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 78

    $default  reduce using rule 43 (rel_expression)


State 97

   47 term: term MULOP unary_expression .

    $default  reduce using rule 47 (term)


State 98

   29 statement: IF LPAREN expression RPAREN . statement
   30          | IF LPAREN expression RPAREN . statement ELSE statement

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    WHILE        shift, and go to state 32
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 33
    PRINTLN      shift, and go to state 34
    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    LCURL        shift, and go to state 23
    SEMICOLON    shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ID           shift, and go to state 42

    func_definition       go to state 43
    compound_statement    go to state 44
    var_declaration       go to state 45
    type_specifier        go to state 9
    statement             go to state 105
    expression_statement  go to state 48
    variable              go to state 49
    expression            go to state 50
    logic_expression      go to state 51
    rel_expression        go to state 52
    simple_expression     go to state 53
    term                  go to state 54
    unary_expression      go to state 55
    factor                go to state 56


State 99

   28 statement: FOR LPAREN expression_statement expression_statement . expression RPAREN statement

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ID           shift, and go to state 42

    variable           go to state 49
    expression         go to state 106
    logic_expression   go to state 51
    rel_expression     go to state 52
    simple_expression  go to state 53
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56


State 100

   31 statement: WHILE LPAREN expression RPAREN . statement

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    WHILE        shift, and go to state 32
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 33
    PRINTLN      shift, and go to state 34
    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    LCURL        shift, and go to state 23
    SEMICOLON    shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ID           shift, and go to state 42

    func_definition       go to state 43
    compound_statement    go to state 44
    var_declaration       go to state 45
    type_specifier        go to state 9
    statement             go to state 107
    expression_statement  go to state 48
    variable              go to state 49
    expression            go to state 50
    logic_expression      go to state 51
    rel_expression        go to state 52
    simple_expression     go to state 53
    term                  go to state 54
    unary_expression      go to state 55
    factor                go to state 56


State 101

   32 statement: PRINTLN LPAREN ID RPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 108


State 102

   52 factor: ID LPAREN argument_list RPAREN .

    $default  reduce using rule 52 (factor)


State 103

   60 arguments: arguments COMMA . logic_expression

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ID           shift, and go to state 42

    variable           go to state 65
    logic_expression   go to state 109
    rel_expression     go to state 52
    simple_expression  go to state 53
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56


State 104

   37 variable: ID LTHIRD expression RTHIRD .

    $default  reduce using rule 37 (variable)


State 105

   29 statement: IF LPAREN expression RPAREN statement .
   30          | IF LPAREN expression RPAREN statement . ELSE statement

    ELSE  shift, and go to state 110

    $default  reduce using rule 29 (statement)


State 106

   28 statement: FOR LPAREN expression_statement expression_statement expression . RPAREN statement

    RPAREN  shift, and go to state 111


State 107

   31 statement: WHILE LPAREN expression RPAREN statement .

    $default  reduce using rule 31 (statement)


State 108

   32 statement: PRINTLN LPAREN ID RPAREN SEMICOLON .

    $default  reduce using rule 32 (statement)


State 109

   60 arguments: arguments COMMA logic_expression .

    $default  reduce using rule 60 (arguments)


State 110

   30 statement: IF LPAREN expression RPAREN statement ELSE . statement

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    WHILE        shift, and go to state 32
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 33
    PRINTLN      shift, and go to state 34
    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    LCURL        shift, and go to state 23
    SEMICOLON    shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ID           shift, and go to state 42

    func_definition       go to state 43
    compound_statement    go to state 44
    var_declaration       go to state 45
    type_specifier        go to state 9
    statement             go to state 112
    expression_statement  go to state 48
    variable              go to state 49
    expression            go to state 50
    logic_expression      go to state 51
    rel_expression        go to state 52
    simple_expression     go to state 53
    term                  go to state 54
    unary_expression      go to state 55
    factor                go to state 56


State 111

   28 statement: FOR LPAREN expression_statement expression_statement expression RPAREN . statement

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    WHILE        shift, and go to state 32
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 33
    PRINTLN      shift, and go to state 34
    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    LCURL        shift, and go to state 23
    SEMICOLON    shift, and go to state 39
    CONST_INT    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    ID           shift, and go to state 42

    func_definition       go to state 43
    compound_statement    go to state 44
    var_declaration       go to state 45
    type_specifier        go to state 9
    statement             go to state 113
    expression_statement  go to state 48
    variable              go to state 49
    expression            go to state 50
    logic_expression      go to state 51
    rel_expression        go to state 52
    simple_expression     go to state 53
    term                  go to state 54
    unary_expression      go to state 55
    factor                go to state 56


State 112

   30 statement: IF LPAREN expression RPAREN statement ELSE statement .

    $default  reduce using rule 30 (statement)


State 113

   28 statement: FOR LPAREN expression_statement expression_statement expression RPAREN statement .

    $default  reduce using rule 28 (statement)
